@@ -4,9 +4,14 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.AnonymousAuthenticationToken;
+import org.springframework.security.authentication.AuthenticationTrustResolver;
+import org.springframework.security.authentication.AuthenticationTrustResolverImpl;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.security.core.annotation.CurrentSecurityContext;
 import org.springframework.security.core.context.SecurityContext;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.User;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -18,9 +23,12 @@ import java.util.ServiceConfigurationError;
 @RestController
 public class IndexController {
 
+    AuthenticationTrustResolverImpl trustResolver = new AuthenticationTrustResolverImpl();
+
     @GetMapping("/")
-    public String index(HttpServletRequest request) {
-        return "index";
+    public String index() {
+        Authentication authentication = SecurityContextHolder.getContextHolderStrategy().getContext().getAuthentication();
+        return trustResolver.isAnonymous(authentication) ? "anonymous" : "authenticated";  // 인증 객체 타입이 anonymous인지 확인
     }
 
     @GetMapping("/home")
@@ -60,8 +68,24 @@ public class IndexController {
     }
 
     @GetMapping("/user")
-    public String user() {
-        return "user";
+    public User user(@AuthenticationPrincipal User user) {
+        return user;
+    }
+
+    // User객체의 필드를 가져올 수 있음
+    @GetMapping("/user2")
+    public String user2(@AuthenticationPrincipal(expression = "username") String user) {
+        return user;
+    }
+
+    @GetMapping("/currentUser")
+    public User currentUser(@CurrentUser User user) {
+        return user;
+    }
+
+    @GetMapping("/currentUser2")
+    public String currentUser2(@CurrentUsername String user) {
+        return user;
     }
 
     @GetMapping("/db")
@@ -74,18 +98,18 @@ public class IndexController {
         return "admin";
     }
 
-    @GetMapping("/login")
-    public String login(HttpServletRequest request, MemberDto memberDto) throws ServletException {
-        request.login(memberDto.getUsername(), memberDto.getPassword());
-        System.out.println("login is Successsful");
-        return "login";
-    }
+//    @GetMapping("/login")
+//    public String login(HttpServletRequest request, MemberDto memberDto) throws ServletException {
+//        request.login(memberDto.getUsername(), memberDto.getPassword());
+//        System.out.println("login is Successsful");
+//        return "login";
+//    }
 
-    @GetMapping("/users")
-    public List<MemberDto> users(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-        boolean authenticate = request.authenticate(response);
-        if(authenticate)
-            return List.of(new MemberDto("user", "1111"));
-        return Collections.emptyList();
-    }
+//    @GetMapping("/users")
+//    public List<MemberDto> users(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+//        boolean authenticate = request.authenticate(response);
+//        if(authenticate)
+//            return List.of(new MemberDto("user", "1111"));
+//        return Collections.emptyList();
+//    }
 }
